--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,17 @@
   background-color: #041E41 !important;
 }
 
+.ui.primary.button{
+  background-color: #041E41 !important;
+}
+
+.ui.primary.button:hover{
+  background-color: #009abf !important;
+}
+
+
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
